connection à la base de données PostgreSQL

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 API_KEY = e037df640cde5f48d2e87e9542581909
 VC_API_KEY = 8FRGN6ZZD2E4SDBMWA459DKQL
 OW_API_KEY = e037df640cde5f48d2e87e9542581909
+
+# Configuration de connexion (à adapter selon votre provider)
+DATABASE_CONFIG={"host": "aws-0-eu-west-3.pooler.supabase.com", "database": "postgres", "user": "postgres.xtfznwmlhngbzixfzwgq", "password": "mentos", "port": 5432}
